# CMake-Skeleton

./: CMakeLists.txt  readme.md
cmake/: build.bat.in  config.h.in  install.bat.in
modules/mylib/: config.h
modules/mylib/fuga/: CMakeLists.txt  fuga_test.cxx  fuga_test.hxx
modules/mylib/hoge/: CMakeLists.txt  hoge_test.cxx  hoge_test.hxx
modules/mylib/hoge/TestDir/: hoge_test2.cxx  hoge_test2.hxx
