CMAKE_MINIMUM_REQUIRED (VERSION 2.8)


set(TARGET_DIR_NAME hoge)
set(TARGET_NAME "${LIBRARY_NAME}_${TARGET_DIR_NAME}")
file(GLOB SOURCES 
  "${CMAKE_CURRENT_LIST_DIR}/*.c*"
  "${CMAKE_CURRENT_LIST_DIR}/TestDir/*.c*"
)
file(GLOB HEADERS 
  "${CMAKE_CURRENT_LIST_DIR}/*.h*"
  "${CMAKE_CURRENT_LIST_DIR}/TestDir/*.h*"
)


# STATIC LIB FILE
include_directories("${PROJECT_SOURCE_DIR}/modules/${TARGET_DIR_NAME}")
add_library(${TARGET_NAME} STATIC ${SOURCES})

install (TARGETS ${TARGET_NAME} DESTINATION "lib")
install (FILES ${HEADERS} DESTINATION "include/${LIBRARY_NAME}/${TARGET_DIR_NAME}")
